Using the latest snapshot version

--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular-route.min.js"></script>
 
-    <script type="text/javascript" src="assets/vendor/angular-nested-views-0.1.0-snapshot.js"></script>
+    <script src="http://evangalen.github.io/angular-nested-views/angular-nested-views-0.1.0-snapshot.js"></script>
 
 	<!-- Load AngularJS application module. -->
 	<script type="text/javascript" src="assets/app/main.js"></script>
