--- a/index.htm
+++ b/index.htm
@@ -21,14 +21,12 @@
 
 
 	<!-- Load vendor scripts. -->
-	<script type="text/javascript" src="assets/vendor/jquery/jquery-1.8.3.min.js"></script>
-	<script type="text/javascript" src="assets/vendor/lodash/lodash.min.js"></script>
+	<script type="text/javascript" src="assets/bower_components/jquery/jquery.js"></script>
+	<script type="text/javascript" src="assets/bower_components/lodash/lodash.js"></script>
 
-	<!--<script type="text/javascript" src="assets/vendor/angularjs/angular.min.js"></script>-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular-route.min.js"></script>
+	<script type="text/javascript" src="assets/bower_components/angular/angular.js"></script>
 
-    <script src="http://evangalen.github.io/angular-nested-views/angular-nested-views-0.1.0-snapshot.js"></script>
+	<script type="text/javascript" src="assets/bower_components/angular-nested-views/angular-nested-views.js"></script>
 
 	<!-- Load AngularJS application module. -->
 	<script type="text/javascript" src="assets/app/main.js"></script>
